* SVN *

* Added linked_tag_list(article, separator).  Use like linked_section_list.

* Enhanced the theme preview slightly

* Changed some wording on moderate comments area 

* Added linked_section_list(article, separator)
  
  Pass in an article and it will return that articles sections all linked up.
  {{ article | linked_section_list }}
  {{ article | linked_section_list: ' and ' }}

* Removed archive.liquid and index.liquid fallbacks

* NEW FEATURE: Redirections (see environment.rb)

* Allow drag/drop reordering of sections in a site [Bill Katz]

* Refine child_sections liquid filter, add descendant_sections filter [Cristi Balan]

  {{ 'projects' | child_sections }} # => any sections with a path matching projects/foo, but not projects/foo/bar
  {{ 'projects' | descendant_sections }} # => any sections starting with /projects/*

* allow macros to ignore extra line breaks after a start tag and before an end tag [Ben Bleything]

* Add XML:Base to atom feeds (thanks Sam Ruby)

* Add comments and changes feeds for articles.

  {{ article | comments_feed }}
  {{ article | changes_feed: "Latest Changes for this Article" }}

* Cache article-specific fields in comments table, allow simple linking to article:

  {{ comment | link_to_article }}
  {{ comment.url }}

* Add Liquid Filter helpers for showing comment/article feeds for a section

  {{ section | comments_feed }}
  {{ section | articles_feed: "Latest Articles for this section" }}

* Add site-specific comment atom feeds and global site comment feeds

  {{ '' | all_comments_feed }}
  {{ 'comments.xml' | atom_feed }} # comments for home section
  {{ 'atom.xml' | atom_feed }}     # articles for home section
  {{ 'projects/foo/comments.xml' | atom_feed: "Project Foo Comments" }} # comments for projects/foo section with optional title

* Add liquid drop/filters for getting the latest comments for a section.

  {{ section | latest_comments: 2 }}
  {% for comment in section.comments %}
